
osipparser2_headers_includedir=$(includedir)/osipparser2/headers

osipparser2_headers_include_HEADERS= \
osip_accept.h           osip_contact.h              osip_mime_version.h       \
osip_accept_encoding.h  osip_content_disposition.h  osip_proxy_authenticate.h \
osip_accept_language.h  osip_content_encoding.h     osip_proxy_authorization.h\
osip_alert_info.h       osip_content_length.h       osip_record_route.h       \
osip_allow.h            osip_content_type.h         osip_route.h              \
osip_authorization.h    osip_cseq.h                 osip_to.h                 \
osip_call_info.h        osip_error_info.h           osip_via.h                \
osip_call_id.h          osip_from.h                 osip_www_authenticate.h   \
osip_header.h           osip_authentication_info.h  \
osip_proxy_authentication_info.h

